# foxtask7

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/foxaznmonacoflask/: wsgi.py
src/foxaznmonacoflask/templates/: base.html  driver_profile.html  index.html  report.html  report_drivers.html
